rusty-cdk-macros/tests/fails/iam_action_empty_string.rs
use rusty_cdk_macros::iam_action;

fn example() {
    let action = iam_action!("");
}

fn main() {}
