rusty-cdk-macros/tests/fails/iam_action_empty_string.stderr
error: action should not be blank
 --> tests/fails/iam_action_empty_string.rs:4:30
  |
4 |     let action = iam_action!("");
  |                              ^^
